add a soft wrap action/toolbar button for internal infoview