@@ -64,6 +64,72 @@ For first (and while require updating the frontend, run a `gradle buildBrowserIn
 
 # Debug and troubleshooting
 
+TODO
+
+# Test
+
+The unittests are essential for regression while refactoring the codebase and implementing new features. Although currently there is little tests wrote in the project.
+Running it from gradle seems working fine currently, but for running a selected test in Intellij, add the following vm options. Check some test configuration files in the
+`.run` directory for detail.
+
+```
+--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED
+--add-exports=java.base/sun.util.calendar=ALL-UNNAMED
+--add-exports=java.desktop/sun.awt=ALL-UNNAMED
+--add-exports=jdk.scripting.nashorn/jdk.nashorn.internal.ir=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.module=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
+--add-opens=java.base/java.time=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.jimage=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.jimage.decompressor=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.jrtfs=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.math=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.module=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.perf=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.platform.cgroupv1=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.util.jar=ALL-UNNAMED
+--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED
+--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED
+--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED
+--add-opens=java.desktop/java.awt=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.event=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.image=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
+--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED
+--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED
+--add-opens=java.desktop/sun.font=ALL-UNNAMED
+--add-opens=java.desktop/sun.java2d=ALL-UNNAMED
+--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED
+--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED
+--add-opens=java.desktop/sun.swing=ALL-UNNAMED
+--add-opens=java.logging/sun.util.logging.internal=ALL-UNNAMED
+--add-opens=java.xml/javax.xml.catalog=ALL-UNNAMED
+--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED
+--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED
+--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED
+--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+--add-opens=jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED
+--add-opens=jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED
+-Didea.force.use.core.classloader=true
+-Djava.system.class.loader=com.intellij.util.lang.PathClassLoader
+-ea
+```
 
 
 # Ref
